# panda_myoarm

./: .gitmodules  README.md  pyproject.toml  requirements.txt  train.sh
data/: panda_traj_model.csv  panda_trajectory.csv
