[project]
name = "panda-myoarm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py==2.1.0",
    "ale-py==0.10.2",
    "dm-control==1.0.15",
    "dm-env==1.6",
    "dm-robotics-agentflow==0.8.1",
    "dm-robotics-controllers==0.8.1",
    "dm-robotics-geometry==0.8.1",
    "dm-robotics-manipulation==0.8.1",
    "dm-robotics-moma==0.8.1",
    "dm-robotics-panda==0.4.8",
    "dm-robotics-transformations==0.8.1",
    "dm-tree==0.1.8",
    "gym==0.26.2",
    "gym-notices==0.0.8",
    "gymnasium==1.0.0",
    "imageio==2.37.0",
    "matplotlib==3.10.0",
    "networkx==3.4.2",
    "numpy==1.26.4",
    "opencv-python==4.10.0.84",
    "pandas==2.2.3",
    "pillow==11.1.0",
    "protobuf==5.29.1",
    "shimmy==2.0.0",
    "stable-baselines3[extra]==2.5.0",
    "torch==2.6.0",
    "tqdm==4.67.1",
]
